--- a/templates/home.html
+++ b/templates/home.html
@@ -18,6 +18,21 @@
         {% else %}
         <h1>Olá, Mundo</h1>
         {% endif %}
+
+        <ul class="nav">
+          <li class="nav-item">
+            <a class="nav-link active" href="#">Ativo</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Desativado</a>
+          </li>
+        </ul>
     </div>
 
     <!-- JavaScript (Opcional) -->
