--- a/templates/home.html
+++ b/templates/home.html
@@ -19,6 +19,14 @@
         <h1>Olá, Mundo</h1>
         {% endif %}
 
+
+        {% if idade %}
+        <h1>Tenho {{ idade }}, anos</h1>
+        {% else %}
+        <h1>Idade não obtida/h1>
+        {% endif %}
+
+
         <ul class="nav">
           <li class="nav-item">
             <a class="nav-link active" href="#">Ativo</a>
