--- a/templates/home.html
+++ b/templates/home.html
@@ -28,11 +28,9 @@
 
          <hr>
 
-         {% if name %}
-         <h1>Olá, {{ name }}, e tenho {{ idade }} anos</h1>
-         {% else %}
-         <h1>Olá, Mundo</h1>
-         {% endif %}
+        
+         <h1>Olá, eu sou {{ name }}, e tenho {{ idade }} anos</h1>
+      
 
 
         <ul class="nav">
